<?xml version="1.0" encoding="UTF-8"?>
<project xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
	xmlns="http://maven.apache.org/POM/4.0.0"
	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
	<modelVersion>4.0.0</modelVersion>
	<groupId>cl.camodev</groupId>
	<artifactId>wosbot</artifactId>
	<version>${revision}</version>
	<packaging>pom</packaging>
	<name>Whiteout Survival Bot</name>

    <properties>
        <revision>1.5.4</revision>
        <javafx-version>23.0.1</javafx-version>
        <java.version>21</java.version>
		<slf4j.version>2.0.17</slf4j.version>
		<logback.version>1.4.14</logback.version>
        <maven.compiler.source>21</maven.compiler.source>
        <maven.compiler.target>21</maven.compiler.target>
    </properties>
	<modules>
		<module>wos-hmi</module>
		<module>wos-utiles</module>
		<module>wos-persitence</module>
		<module>wos-serv</module>
		<module>wos-ot</module>
	</modules>

	<repositories>
		<repository>
			<id>google</id>
			<name>Google Maven Repository</name>
			<url>https://maven.google.com/</url>
		</repository>
	</repositories>

	<dependencyManagement>
		<dependencies>
			<dependency>
				<groupId>org.openjfx</groupId>
				<artifactId>javafx-controls</artifactId>
				<version>${javafx-version}</version>
			</dependency>
			<dependency>
				<groupId>org.openjfx</groupId>
				<artifactId>javafx-fxml</artifactId>
				<version>${javafx-version}</version>
			</dependency>
			<!-- SLF4J API -->
			<dependency>
				<groupId>org.slf4j</groupId>
				<artifactId>slf4j-api</artifactId>
				<version>${slf4j.version}</version>
			</dependency>
 		<!-- Logback implementation (binding) -->
 		<dependency>
 			<groupId>ch.qos.logback</groupId>
 			<artifactId>logback-classic</artifactId>
 			<version>${logback.version}</version>
 			<scope>runtime</scope>
 		</dependency>
 		<!-- Janino for Logback conditional processing (JaninoEventEvaluator) -->
 		<dependency>
 			<groupId>org.codehaus.janino</groupId>
 			<artifactId>janino</artifactId>
 			<version>3.1.12</version>
 			<scope>runtime</scope>
 		</dependency>
 	</dependencies>
 </dependencyManagement>

</project>
